--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: black;
   background-color: #fff;
+  font-family: "Courier New", Courier, monospace;
 }
 
 li,
 a {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 16;
-  color: black;
+  font-size: 20px;
   text-decoration: none;
 }
 
@@ -18,7 +18,7 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 20px 10%;
+  padding: 0px 5%;
 }
 
 .logo {
@@ -43,4 +43,50 @@ header {
   transition: all 0.3s ease 0s;
   color: rgb(82, 71, 71);
   text-decoration: underline;
+}
+
+h2 {
+  font-size: 30px;
+  text-indent: 6.5%;
+  line-height: 1.5;
+  border-top: 10px;
+}
+
+h3 {
+  font-size: 25px;
+  text-indent: 6.5%;
+  line-height: 1.5;
+}
+
+p {
+  font-size: 20px;
+  text-indent: 6.5%;
+  line-height: 1.5;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  border-radius: 10px;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.flex div {
+  flex: 1 1 400px;
+  justify-content: space-between;
+  margin: 20px 40px;
+
+  transition: 0.5s;
+}
+
+.flex div:hover {
+  transform: scale(1.3);
+  z-index: 2;
+  cursor: pointer;
 }
