Updated  LOGO height and width

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,8 +22,8 @@ header {
 }
 
 .logo {
-  height: 100px;
-  width: 200x;
+  height: 5%;
+  width: 30%;
   margin-right: auto;
   cursor: pointer;
 }
